<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FingerPaint</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="email">Email</string>
    <string name="exit">Exit</string>
    <string name="triangle">Triangle</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
</resources>
