<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_paint"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fingerpaint.MainActivity" >

    <com.example.fingerpaint.FingerPaint
        android:id="@+id/draw_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonControls"
        android:background="#FFFFFF" />

    <LinearLayout
        android:id="@+id/buttonControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF" >

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save"
            android:src="@drawable/save_btn" />

        <ImageButton
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/reset"
            android:src="@drawable/reset_btn" />

        <ImageButton
            android:id="@+id/btnEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/email"
            android:src="@drawable/email_btn" />

        <ImageButton
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit"
            android:src="@drawable/exit_btn" />
    </LinearLayout>
    
    <SlidingDrawer
     		android:id="@+id/slidingDrawer"
     		android:layout_width="match_parent"
     		android:layout_height="match_parent"
     		android:layout_below="@+id/buttonControls"
     		android:allowSingleTap="true"
     		android:content="@+id/toolsLayout"
     		android:handle="@+id/slidingBtn"
     		android:orientation="horizontal" >
        <Button
            android:id="@+id/slidingBtn"
            android:layout_width="30dp"
            android:layout_height="100dp"            
            android:layout_gravity="center_vertical"
            android:text="&lt;" />
        
    <LinearLayout
        android:id="@+id/toolsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/slidingBtn" >

        <LinearLayout
            android:id="@+id/paletteTool_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#FFFFFF"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnBlack"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#000000"
                android:tag="#000000" />

            <Button
                android:id="@+id/btnGrey"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#808080"
                android:tag="#808080" />

            <Button
                android:id="@+id/btnWhite"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:tag="#FFFFFF" />

            <Button
                android:id="@+id/btnPink"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#FF00FF"
                android:tag="#FF00FF" />

            <Button
                android:id="@+id/btnPurple"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#800080"
                android:tag="#800080" />

            <Button
                android:id="@+id/btnRed"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#FF0000"
                android:tag="#FF0000" />

            <Button
                android:id="@+id/btnMaroon"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#800000"
                android:tag="#800000" />

            <Button
                android:id="@+id/btnYellow"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#FFFF00"
                android:tag="#FFFF00" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/paletteTool_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#FFFFFF"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnLime"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#00FF00"
                android:tag="#00FF00" />

            <Button
                android:id="@+id/btnGreen"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#008000"
                android:tag="#008000" />

            <Button
                android:id="@+id/btnAqua"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#00FFFF"
                android:tag="#00FFFF" />

            <Button
                android:id="@+id/btnTeal"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#008080"
                android:tag="#008080" />

            <Button
                android:id="@+id/btnBlue"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#0000FF"
                android:tag="#0000FF" />

            <Button
                android:id="@+id/btnNavy"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#000080"
                android:tag="#000080" />

            <Button
                android:id="@+id/btnOrange"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#FA6800"
                android:tag="#FA6800" />

            <Button
                android:id="@+id/btnAmber"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:background="#F0A30A"
                android:tag="#F0A30A" />
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/shapeTool" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"             
            android:layout_gravity="center_vertical" 
            android:background="#FFFFFF" 
            android:orientation="vertical">

            <ImageButton 
                android:id="@+id/triangle" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_margin="2dp" 
                android:scaleType="center" 
                android:contentDescription="@string/triangle"
                android:src="@drawable/triangle" />

            <ImageButton 
                android:id="@+id/circle" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_margin="2dp" 
                android:contentDescription="@string/circle"
                android:src="@drawable/circle" />

            <ImageButton 
                android:id="@+id/square" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_margin="2dp" 
                android:contentDescription="@string/square"
                android:src="@drawable/square" />
        </LinearLayout>
        
    </LinearLayout>
    </SlidingDrawer>

</RelativeLayout>